# cloudnet-rest-module/src/main/java/eu/cloudnetservice/ext/modules/rest/v3/V3HttpHandlerTemplate.java
@@ -140,7 +140,7 @@ public final class V3HttpHandlerTemplate {
       prefix,
       name,
       (template, storage) -> JsonResponse.builder()
-        .body(storage.listFiles(template, directory, Boolean.parseBoolean(deep))));
+        .body(Map.of("files", storage.listFiles(template, directory, Boolean.parseBoolean(deep)))));
   }
 
   @RequestHandler(path = "/api/v3/template/{storage}/{prefix}/{name}/create", method = HttpMethod.POST)
@@ -344,7 +344,8 @@ public final class V3HttpHandlerTemplate {
   @FunctionalInterface
   private interface ThrowableBiFunction<T, U, E extends Throwable> {
 
-    @NonNull IntoResponse<?> apply(@NonNull T t, @NonNull U u) throws E;
+    @NonNull
+    IntoResponse<?> apply(@NonNull T t, @NonNull U u) throws E;
   }
 
   private @NonNull InputStreamResponse.Builder applyDispositionHeader(
