# cloudnet-rest-module/src/main/resources/documentation/swagger.yaml
@@ -2597,9 +2597,11 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/FileInfo'
+                properties:
+                  files:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/FileInfo'
         '401':
           $ref: '#/components/responses/Problem'
         '403':
